--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <div>Add from camera</div>
             </div>
         </div>
-        <textarea class="search-input" placeholder="Type your prompt here..."></textarea>
+        <textarea class="search-input" placeholder="copy https://example.com..."></textarea>
         <div class="right-section">
             <div class="model-select" tabindex="0" aria-haspopup="listbox" aria-expanded="false">
                 <span class="model-name">claude-4-sonnet</span>
@@ -481,3 +481,4 @@
 
 </body>
 </html>
+
